# DjangoStripe

./: .env.example  .gitignore  .pre-commit-config.yaml  Readme.md  pyproject.toml
config/: settings.py  urls.py
item/: models.py  stipes_requests.py  urls.py  views.py
item/migrations/: 0001_initial.py  0002_alter_item_price.py
templates/: home.html
